fixed famous scrollbar issue when using vh/vw unit

--- a/assets/website/styles/login.css
+++ b/assets/website/styles/login.css
@@ -1,3 +1,11 @@
+body,html {
+    margin: 0;
+    padding: 0;
+}
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #ff583348;
     height: 100vh;
@@ -11,6 +19,7 @@ body {
     width: 33%;
     min-width: 360px;
     height: 360px;
+    
     border-radius: 20px;
     box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.1);
     background-color: #FFF;
